--- a/.github/workflows/cpp-build.yml
+++ b/.github/workflows/cpp-build.yml
@@ -1,3 +1,4 @@
+```yaml
 name: DNAPass Password Generator CI
 
 on:
@@ -132,3 +133,4 @@ jobs:
       env:
         test_input.txt: |
           12
+```
