--- a/.github/workflows/cpp-build.yml
+++ b/.github/workflows/cpp-build.yml
@@ -92,17 +92,17 @@ jobs:
       if: matrix.os == 'windows-latest'
       run: |
         echo Current directory: %CD%
-        dir ..\CMakeLists.txt
+        dir CMakeLists.txt
       shell: cmd
 
     - name: Configure CMake (Windows)
       if: matrix.os == 'windows-latest' && matrix.compiler == 'gcc'
-      run: cmake %GITHUB_WORKSPACE% -G "MinGW Makefiles" -DCMAKE_CXX_COMPILER=g++
+      run: cmake %GITHUB_WORKSPACE%\dnapass-password-generator -G "MinGW Makefiles" -DCMAKE_CXX_COMPILER=g++
       shell: cmd
 
     - name: Configure CMake (Windows - Default)
       if: matrix.os == 'windows-latest' && matrix.compiler != 'gcc'
-      run: cmake %GITHUB_WORKSPACE% -DCMAKE_CXX_COMPILER=${{ matrix.compiler == 'gcc' && 'g++' || 'clang++' }}
+      run: cmake %GITHUB_WORKSPACE%\dnapass-password-generator -DCMAKE_CXX_COMPILER=${{ matrix.compiler == 'gcc' && 'g++' || 'clang++' }}
       shell: cmd
 
     - name: Configure CMake (Unix)
