--- a/.github/workflows/cpp-build.yml
+++ b/.github/workflows/cpp-build.yml
@@ -42,20 +42,20 @@ jobs:
 
     - name: Set up compiler
       run: |
-        if "${{ matrix.os }}" == "ubuntu-latest" || "${{ matrix.os }}" == "macos-latest"; then
-          if [ "${{ matrix.compiler }}" == "gcc" ]; then
+        if [ "${{ matrix.os }}" = "ubuntu-latest" ] || [ "${{ matrix.os }}" = "macos-latest" ]; then
+          if [ "${{ matrix.compiler }}" = "gcc" ]; then
             sudo apt-get update -y
             sudo apt-get install -y g++ cmake
           else
             sudo apt-get update -y
             sudo apt-get install -y clang cmake
           fi
-        elif "${{ matrix.os }}" == "windows-latest"; then
+        elif [ "${{ matrix.os }}" = "windows-latest" ]; then
           choco install cmake -y --no-progress
-          if "${{ matrix.compiler }}" == "gcc" ; then
+          if [ "${{ matrix.compiler }}" = "gcc" ]; then
             choco install mingw -y --no-progress
-            echo "C:\ProgramData\chocolatey\bin" >> $env:GITHUB_PATH
-            echo "C:\Program Files\mingw-w64\mingw64\bin" >> $env:GITHUB_PATH
+            echo "C:\ProgramData\chocolatey\bin" >> $GITHUB_PATH
+            echo "C:\Program Files\mingw-w64\mingw64\bin" >> $GITHUB_PATH
           fi
         fi
       shell: bash
