--- a/.github/workflows/cpp-build.yml
+++ b/.github/workflows/cpp-build.yml
@@ -42,13 +42,20 @@ jobs:
 
     - name: Set up compiler
       run: |
-        if [ "${{ matrix.os }}" = "ubuntu-latest" ] || [ "${{ matrix.os }}" = "macos-latest" ]; then
+        if [ "${{ matrix.os }}" = "ubuntu-latest" ]; then
           if [ "${{ matrix.compiler }}" = "gcc" ]; then
             sudo apt-get update -y
             sudo apt-get install -y g++ cmake
           else
             sudo apt-get update -y
             sudo apt-get install -y clang cmake
+          fi
+        elif [ "${{ matrix.os }}" = "macos-latest" ]; then
+          brew install cmake
+          if [ "${{ matrix.compiler }}" = "gcc" ]; then
+            brew install gcc
+          else
+            brew install llvm  # Para clang
           fi
         elif [ "${{ matrix.os }}" = "windows-latest" ]; then
           choco install cmake -y --no-progress
@@ -70,7 +77,7 @@ jobs:
     - name: Install clang-tidy (Linux and macOS)
       if: matrix.os != 'windows-latest'
       run: |
-        if [ "${{ matrix.os }}" == "ubuntu-latest" ]; then
+        if [ "${{ matrix.os }}" = "ubuntu-latest" ]; then
           sudo apt-get install -y clang-tidy
         else
           brew install llvm
