--- a/.github/workflows/cpp-build.yml
+++ b/.github/workflows/cpp-build.yml
@@ -81,7 +81,9 @@ jobs:
           sudo apt-get install -y clang-tidy
         else
           brew install llvm
-          echo "/usr/local/opt/llvm/bin" >> $GITHUB_PATH
+          LLVM_DIR=$(brew --prefix llvm)
+          echo "$LLVM_DIR/bin" >> $GITHUB_PATH
+          echo "clang-tidy installed at: $LLVM_DIR/bin/clang-tidy"
         fi
       shell: bash
 
