--- a/.github/workflows/cpp-build.yml
+++ b/.github/workflows/cpp-build.yml
@@ -119,7 +119,17 @@ jobs:
         mkdir build
         cd build
         if [ "${{ matrix.compiler }}" = "gcc" ]; then
-          CMAKE_CXX_COMPILER=$(brew --prefix gcc)/bin/g++
+          GPP_PATH=$(brew --prefix gcc)/bin/g++
+          if [ ! -f "$GPP_PATH" ]; then
+            echo "Error: g++ not found at $GPP_PATH. Checking alternatives..."
+            GPP_PATH=$(which g++ || echo "")
+            if [ -z "$GPP_PATH" ]; then
+              echo "Error: No g++ compiler found. Please install gcc via brew."
+              exit 1
+            fi
+          fi
+          CMAKE_CXX_COMPILER=$GPP_PATH
+          echo "Using g++ at: $CMAKE_CXX_COMPILER"
           cmake .. -DCMAKE_CXX_COMPILER=$CMAKE_CXX_COMPILER
         else
           CMAKE_CXX_COMPILER=$(brew --prefix llvm)/bin/clang++
