--- a/.github/workflows/cpp-build.yml
+++ b/.github/workflows/cpp-build.yml
@@ -57,8 +57,7 @@ jobs:
         if ! command -v brew >/dev/null 2>&1; then
           echo "Installing Homebrew..."
           /bin/bash -c "$(curl -fsSL https://raw.githubusercontent.com/Homebrew/install/HEAD/install.sh)"
-          echo "# Set PATH for Homebrew" >> $GITHUB_ENV
-          echo "PATH=$PATH:/usr/local/bin:/opt/homebrew/bin" >> $GITHUB_ENV
+          echo "PATH=/usr/local/bin:/opt/homebrew/bin:$PATH" >> $GITHUB_ENV
         fi
       shell: bash
 
@@ -68,8 +67,10 @@ jobs:
         sudo apt-get update -y
         if [ "${{ matrix.compiler }}" = "gcc" ]; then
           sudo apt-get install -y g++ cmake
+          echo "CMAKE_CXX_COMPILER=g++" >> $GITHUB_ENV
         else
           sudo apt-get install -y clang cmake
+          echo "CMAKE_CXX_COMPILER=clang++" >> $GITHUB_ENV
         fi
       shell: bash
 
@@ -79,8 +80,10 @@ jobs:
         brew install cmake
         if [ "${{ matrix.compiler }}" = "gcc" ]; then
           brew install gcc
+          echo "CMAKE_CXX_COMPILER=$(brew --prefix gcc)/bin/g++" >> $GITHUB_ENV
         else
           brew install llvm
+          echo "CMAKE_CXX_COMPILER=$(brew --prefix llvm)/bin/clang++" >> $GITHUB_ENV
         fi
       shell: bash
 
@@ -89,8 +92,9 @@ jobs:
       run: |
         choco install cmake.install --no-progress
         choco install mingw --no-progress
-        echo C:\ProgramData\chocolatey\bin >> %GITHUB_PATH%
-        echo C:\Program Files\mingw-w64\x86_64-8.1.0-posix-seh-rt_v6-rev0\mingw64\bin >> %GITHUB_PATH%
+        echo "C:\ProgramData\chocolatey\bin" >> %GITHUB_PATH%
+        echo "C:\Program Files\mingw-w64\x86_64-8.1.0-posix-seh-rt_v6-rev0\mingw64\bin" >> %GITHUB_PATH%
+        echo "CMAKE_CXX_COMPILER=g++" >> %GITHUB_ENV%
       shell: cmd
 
     - name: Verify compiler setup (Windows)
@@ -107,14 +111,7 @@ jobs:
           sudo apt-get install -y clang-tidy
         else
           brew install llvm
-          LLVM_DIR=$(brew --prefix llvm)
-          echo "$LLVM_DIR/bin" >> $GITHUB_PATH
-          if [ ! -f "$LLVM_DIR/bin/clang-tidy" ]; then
-            echo "Error: clang-tidy not found at $LLVM_DIR/bin/clang-tidy. Reinstalling..."
-            brew reinstall llvm
-            echo "$LLVM_DIR/bin" >> $GITHUB_PATH
-          fi
-          "$LLVM_DIR/bin/clang-tidy" --version || echo "Warning: clang-tidy version check failed"
+          echo "$(brew --prefix llvm)/bin" >> $GITHUB_PATH
         fi
       shell: bash
 
@@ -129,11 +126,11 @@ jobs:
     - name: Debug - Verify CMakeLists.txt (Windows)
       if: matrix.os == 'windows-latest'
       run: |
-        if exist dnapass_password_generator\CMakeLists.txt (
+        if exist CMakeLists.txt (
           echo CMakeLists.txt found
-          type dnapass_password_generator\CMakeLists.txt
+          type CMakeLists.txt
         ) else (
-          echo Error: CMakeLists.txt not found in dnapass_password_generator
+          echo Error: CMakeLists.txt not found
           exit 1
         )
       shell: cmd
@@ -142,7 +139,7 @@ jobs:
       if: matrix.os == 'windows-latest'
       run: |
         cd build
-        cmake %GITHUB_WORKSPACE%\dnapass_password_generator -G "MinGW Makefiles" -DCMAKE_CXX_COMPILER=g++ -DCMAKE_BUILD_TYPE=Debug
+        cmake .. -G "MinGW Makefiles" -DCMAKE_CXX_COMPILER=g++ -DCMAKE_BUILD_TYPE=Debug
       shell: cmd
 
     - name: Configure CMake (Unix)
@@ -150,28 +147,7 @@ jobs:
       run: |
         mkdir -p build
         cd build
-        if [ "${{ matrix.compiler }}" = "gcc" ]; then
-          if [ "${{ matrix.os }}" = "ubuntu-latest" ]; then
-            CMAKE_CXX_COMPILER=g++
-            echo "Using g++ from apt-get: $CMAKE_CXX_COMPILER"
-          else
-            GPP_PATH=$(brew --prefix gcc)/bin/g++
-            if [ ! -f "$GPP_PATH" ]; then
-              echo "Error: g++ not found at $GPP_PATH. Checking alternatives..."
-              GPP_PATH=$(which g++ || echo "")
-              if [ -z "$GPP_PATH" ]; then
-                echo "Error: No g++ compiler found. Please install gcc via brew."
-                exit 1
-              fi
-            fi
-            CMAKE_CXX_COMPILER=$GPP_PATH
-            echo "Using g++ at: $CMAKE_CXX_COMPILER"
-          fi
-          cmake ../dnapass_password_generator -DCMAKE_CXX_COMPILER=$CMAKE_CXX_COMPILER -DCMAKE_BUILD_TYPE=Debug
-        else
-          CMAKE_CXX_COMPILER=$(brew --prefix llvm)/bin/clang++
-          cmake ../dnapass_password_generator -DCMAKE_CXX_COMPILER=$CMAKE_CXX_COMPILER -DCMAKE_BUILD_TYPE=Debug
-        fi
+        cmake .. -DCMAKE_CXX_COMPILER=${{ env.CMAKE_CXX_COMPILER }} -DCMAKE_BUILD_TYPE=Debug
       shell: bash
 
     - name: Build project (Windows)
@@ -192,8 +168,9 @@ jobs:
     - name: Run clang-tidy (Linux and macOS)
       if: matrix.os != 'windows-latest'
       run: |
+elect: |
         cd build
-        clang-tidy ../dnapass_password_generator/dnapass_generator.cpp -- -std=c++17
+        clang-tidy ../dnapass_password_generator/*.cpp -- -std=c++17
       shell: bash
 
     - name: Test executable (Unix)
