--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,16 +1,6 @@
-# DNAPass Password Generator - CMake Configuration
-#
-# Project Name: DNAPass Password Generator
-# Version: 0.1.0
-# Description: Generate secure passwords inspired by DNA sequences written in C++.
-# Author: Gerivan Costa dos Santos <dean-grumbly-plop@duck.com>
-# License: MIT License
-# Homepage: https://github.com/gerivanc/dnapass-password-generator
-# Repository: https://github.com/gerivanc/dnapass-password-generator.git
-# Issues: https://github.com/gerivanc/dnapass-password-generator/issues
-# Changelog: https://github.com/gerivanc/dnapass-password-generator/blob/main/CHANGELOG.md
-
+# CMake configuration for DNAPass Password Generator
 cmake_minimum_required(VERSION 3.10)
+
 project(DNAPass VERSION 0.1.0 LANGUAGES CXX)
 
 # Set C++ standard to C++17
@@ -18,10 +8,19 @@ set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 set(CMAKE_CXX_EXTENSIONS OFF)
 
-# Add executable
-add_executable(dnapass_generator dnapass_password_generator/dnapass_generator.cpp)
+# Add source files
+set(SOURCE_FILES
+    dnapass_password_generator/dnapass_generator.cpp
+    dnapass_password_generator/main.cpp
+)
 
-# Installation rules (optional, for installing the executable)
+# Add executable
+add_executable(dnapass_generator ${SOURCE_FILES})
+
+# Include header files
+target_include_directories(dnapass_generator PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/dnapass_password_generator)
+
+# Installation rules
 install(TARGETS dnapass_generator DESTINATION bin)
 
 # Add custom message for build completion
