--- a/.github/workflows/cpp-build.yml
+++ b/.github/workflows/cpp-build.yml
@@ -57,7 +57,7 @@ jobs:
         if ! command -v brew >/dev/null 2>&1; then
           echo "Installing Homebrew..."
           /bin/bash -c "$(curl -fsSL https://raw.githubusercontent.com/Homebrew/install/HEAD/install.sh)"
-          echo "PATH=/usr/local/bin:/opt/homebrew/bin:$PATH" >> $GITHUB_ENV
+          echo "PATH=$PATH:/usr/local/bin:/opt/homebrew/bin" >> $GITHUB_ENV
         fi
       shell: bash
 
@@ -65,12 +65,11 @@ jobs:
       if: matrix.os == 'ubuntu-latest'
       run: |
         sudo apt-get update -y
+        sudo apt-get install -y cmake
         if [ "${{ matrix.compiler }}" = "gcc" ]; then
-          sudo apt-get install -y g++ cmake
-          echo "CMAKE_CXX_COMPILER=g++" >> $GITHUB_ENV
+          sudo apt-get install -y g++
         else
-          sudo apt-get install -y clang cmake
-          echo "CMAKE_CXX_COMPILER=clang++" >> $GITHUB_ENV
+          sudo apt-get install -y clang
         fi
       shell: bash
 
@@ -80,10 +79,9 @@ jobs:
         brew install cmake
         if [ "${{ matrix.compiler }}" = "gcc" ]; then
           brew install gcc
-          echo "CMAKE_CXX_COMPILER=$(brew --prefix gcc)/bin/g++" >> $GITHUB_ENV
         else
           brew install llvm
-          echo "CMAKE_CXX_COMPILER=$(brew --prefix llvm)/bin/clang++" >> $GITHUB_ENV
+          echo "$(brew --prefix llvm)/bin" >> $GITHUB_PATH
         fi
       shell: bash
 
@@ -92,9 +90,8 @@ jobs:
       run: |
         choco install cmake.install --no-progress
         choco install mingw --no-progress
-        echo "C:\ProgramData\chocolatey\bin" >> %GITHUB_PATH%
-        echo "C:\Program Files\mingw-w64\x86_64-8.1.0-posix-seh-rt_v6-rev0\mingw64\bin" >> %GITHUB_PATH%
-        echo "CMAKE_CXX_COMPILER=g++" >> %GITHUB_ENV%
+        echo "C:\ProgramData\chocolatey\bin" >> $GITHUB_PATH
+        echo "C:\Program Files\mingw-w64\x86_64-8.1.0-posix-seh-rt_v6-rev0\mingw64\bin" >> $GITHUB_PATH
       shell: cmd
 
     - name: Verify compiler setup (Windows)
@@ -111,7 +108,14 @@ jobs:
           sudo apt-get install -y clang-tidy
         else
           brew install llvm
-          echo "$(brew --prefix llvm)/bin" >> $GITHUB_PATH
+          LLVM_DIR=$(brew --prefix llvm)
+          echo "$LLVM_DIR/bin" >> $GITHUB_PATH
+          if [ ! -f "$LLVM_DIR/bin/clang-tidy" ]; then
+            echo "Error: clang-tidy not found at $LLVM_DIR/bin/clang-tidy. Reinstalling..."
+            brew reinstall llvm
+            echo "$LLVM_DIR/bin" >> $GITHUB_PATH
+          fi
+          "$LLVM_DIR/bin/clang-tidy" --version || echo "Warning: clang-tidy version check failed"
         fi
       shell: bash
 
@@ -123,23 +127,11 @@ jobs:
         echo Current directory: %CD%
       shell: cmd
 
-    - name: Debug - Verify CMakeLists.txt (Windows)
-      if: matrix.os == 'windows-latest'
-      run: |
-        if exist CMakeLists.txt (
-          echo CMakeLists.txt found
-          type CMakeLists.txt
-        ) else (
-          echo Error: CMakeLists.txt not found
-          exit 1
-        )
-      shell: cmd
-
     - name: Configure CMake (Windows)
       if: matrix.os == 'windows-latest'
       run: |
         cd build
-        cmake .. -G "MinGW Makefiles" -DCMAKE_CXX_COMPILER=g++ -DCMAKE_BUILD_TYPE=Debug
+        cmake .. -G "MinGW Makefiles" -DCMAKE_CXX_COMPILER=g++ -CMAKE_BUILD_TYPE=Debug
       shell: cmd
 
     - name: Configure CMake (Unix)
@@ -147,7 +139,27 @@ jobs:
       run: |
         mkdir -p build
         cd build
-        cmake .. -DCMAKE_CXX_COMPILER=${{ env.CMAKE_CXX_COMPILER }} -DCMAKE_BUILD_TYPE=Debug
+        if [ "${{ matrix.compiler }}" = "gcc" ]; then
+          if [ "${{ matrix.os }}" = "ubuntu-latest" ]; then
+            CMAKE_CXX_COMPILER=g++
+          else
+            CMAKE_CXX_COMPILER=$(brew --prefix gcc)/bin/g++
+            if [ ! -f "$CMAKE_CXX_COMPILER" ]; then
+              CMAKE_CXX_COMPILER=$(which g++ || echo "")
+              if [ -z "$CMAKE_CXX_COMPILER" ]; then
+                echo "Error: No g++ compiler found. Please install gcc via brew."
+                exit 1
+              fi
+            fi
+          fi
+        else
+          CMAKE_CXX_COMPILER=$(brew --prefix llvm)/bin/clang++
+          if [ "${{ matrix.os }}" = "ubuntu-latest" ]; then
+            CMAKE_CXX_COMPILER=clang++
+          fi
+        fi
+        echo "Using compiler: $CMAKE_CXX_COMPILER"
+        cmake .. -DCMAKE_CXX_COMPILER=$CMAKE_CXX_COMPILER -CMAKE_BUILD_TYPE=Debug
       shell: bash
 
     - name: Build project (Windows)
@@ -168,9 +180,8 @@ jobs:
     - name: Run clang-tidy (Linux and macOS)
       if: matrix.os != 'windows-latest'
       run: |
-elect: |
         cd build
-        clang-tidy ../dnapass_password_generator/*.cpp -- -std=c++17
+        clang-tidy ../dnapass_password_generator/dnapass_generator.cpp -- -std=c++17
       shell: bash
 
     - name: Test executable (Unix)
