--- a/.github/workflows/cpp-release.yml
+++ b/.github/workflows/cpp-release.yml
@@ -3,10 +3,10 @@ name: Publish DNAPass to GitHub Releases
 on:
   push:
     tags:
-      - 'v*.*.*'  # Publishes when a version tag (e.g., v.0.1.2) is created
+      - 'v*'  # Publishes when a version tag (e.g., v0.1.2) is created
 
 permissions:
-  contents: write  # Required for uploading to GitHub Releases
+  contents: write
 
 jobs:
   release:
@@ -14,120 +14,87 @@ jobs:
     strategy:
       matrix:
         os: [ubuntu-latest, macos-latest, windows-latest]
-        compiler: [gcc, clang]
-        exclude:
-          - os: windows-latest
-            compiler: clang
 
     steps:
     - uses: actions/checkout@v4
-
-    - name: Debug - Show commit and file content
-      run: |
-        echo "Current commit:"
-        git log -1
-        echo "Content of dnapass_generator.cpp:"
-        cat dnapass_password_generator/dnapass_generator.cpp
-      shell: bash
 
     - name: Set up compiler (Ubuntu)
       if: matrix.os == 'ubuntu-latest'
       run: |
         sudo apt-get update -y
-        sudo apt-get install -y cmake
-        if [ "${{ matrix.compiler }}" = "gcc" ]; then
-          sudo apt-get install -y g++
-        else
-          sudo apt-get install -y clang
-        fi
+        sudo apt-get install -y cmake g++
       shell: bash
 
     - name: Set up compiler (macOS)
       if: matrix.os == 'macos-latest'
       run: |
-        if ! command -v brew >/dev/null 2>&1; then
-          echo "Installing Homebrew..."
-          /bin/bash -c "$(curl -fsSL https://raw.githubusercontent.com/Homebrew/install/HEAD/install.sh)"
-          echo "PATH=/usr/local/bin:/opt/homebrew/bin:$PATH" >> $GITHUB_ENV
-        fi
-        brew install cmake
-        if [ "${{ matrix.compiler }}" = "gcc" ]; then
-          brew install gcc
-        else
-          brew install llvm
-          echo "$(brew --prefix llvm)/bin" >> $GITHUB_PATH
-        fi
+        brew install cmake gcc
       shell: bash
 
     - name: Set up compiler (Windows)
       if: matrix.os == 'windows-latest'
       run: |
-        choco install cmake.install --no-progress
-        choco install mingw --no-progress
-        echo "C:\ProgramData\chocolatey\bin" >> $GITHUB_PATH
-        echo "C:\Program Files\mingw-w64\x86_64-8.1.0-posix-seh-rt_v6-rev0\mingw64\bin" >> $GITHUB_PATH
-      shell: cmd
+        choco install cmake --installargs 'ADD_CMAKE_TO_PATH=System' -y
+        choco install mingw -y
+      shell: pwsh
 
-    - name: Configure CMake (Windows)
-      if: matrix.os == 'windows-latest'
-      run: |
-        mkdir build
-        cd build
-        cmake .. -G "MinGW Makefiles" -DCMAKE_CXX_COMPILER=g++ -CMAKE_BUILD_TYPE=Release
-      shell: cmd
-
-    - name: Configure CMake (Unix)
-      if: matrix.os != 'windows-latest'
+    - name: Configure CMake
       run: |
         mkdir -p build
         cd build
-        if [ "${{ matrix.compiler }}" = "gcc" ]; then
-          if [ "${{ matrix.os }}" = "ubuntu-latest" ]; then
-            CMAKE_CXX_COMPILER=g++
-          else
-            CMAKE_CXX_COMPILER=$(brew --prefix gcc)/bin/g++
-            if [ ! -f "$CMAKE_CXX_COMPILER" ]; then
-              CMAKE_CXX_COMPILER=$(which g++ || echo "")
-              if [ -z "$CMAKE_CXX_COMPILER" ]; then
-                echo "Error: No g++ compiler found. Please install gcc via brew."
-                exit 1
-              fi
-            fi
-          fi
+        
+        if [ "${{ runner.os }}" = "Windows" ]; then
+          cmake .. -G "MinGW Makefiles" -DCMAKE_BUILD_TYPE=Release
         else
-          CMAKE_CXX_COMPILER=$(brew --prefix llvm)/bin/clang++
-          if [ "${{ matrix.os }}" = "ubuntu-latest" ]; then
-            CMAKE_CXX_COMPILER=clang++
-          fi
+          cmake .. -DCMAKE_BUILD_TYPE=Release
         fi
-        echo "Using compiler: $CMAKE_CXX_COMPILER"
-        cmake .. -DCMAKE_CXX_COMPILER=$CMAKE_CXX_COMPILER -CMAKE_BUILD_TYPE=Release
       shell: bash
 
-    - name: Build project (Windows)
+    - name: Build project
+      run: |
+        cd build
+        cmake --build . --config Release --parallel
+      shell: bash
+
+    - name: Create release assets directory
+      run: |
+        mkdir -p release_assets
+      shell: bash
+
+    - name: Prepare release asset (Linux)
+      if: matrix.os == 'ubuntu-latest'
+      run: |
+        cd build
+        cp dnapass_generator ../release_assets/dnapass_generator-linux
+        chmod +x ../release_assets/dnapass_generator-linux
+      shell: bash
+
+    - name: Prepare release asset (macOS)
+      if: matrix.os == 'macos-latest'
+      run: |
+        cd build
+        cp dnapass_generator ../release_assets/dnapass_generator-macos
+        chmod +x ../release_assets/dnapass_generator-macos
+      shell: bash
+
+    - name: Prepare release asset (Windows)
       if: matrix.os == 'windows-latest'
       run: |
         cd build
-        cmake --build . --config Release -v
-      shell: cmd
-
-    - name: Build project (Unix)
-      if: matrix.os != 'windows-latest'
-      run: |
-        cd build
-        cmake --build . --config Release -v
+        cp dnapass_generator.exe ../release_assets/dnapass_generator-windows.exe
       shell: bash
 
-    - name: Upload artifact
+    - name: Upload release assets
       uses: actions/upload-artifact@v4
       with:
-        name: dnapass_generator-${{ matrix.os }}-${{ matrix.compiler }}
-        path: build/dnapass_generator${{ matrix.os == 'windows-latest' && '.exe' || '' }}
+        name: release-binaries
+        path: release_assets/
+        retention-days: 1
 
-    - name: Publish to GitHub Releases
+    - name: Create GitHub Release
       if: startsWith(github.ref, 'refs/tags/v')
       uses: softprops/action-gh-release@v1
       with:
-        files: build/dnapass_generator${{ matrix.os == 'windows-latest' && '.exe' || '' }}
+        files: release_assets/*
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
